Bug 340886 - "Junk status changes to "unknown" when I delete or separate an attachment" [r+sr=bienvenu]